# django-static-base

./: 404.html  MANIFEST.in  README.md  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini  versions.json
.github/workflows/: ci.yaml  docs.yaml  main.yaml  pr-rebase-on-push.yaml  upgrade-dependency.yaml  upgrade-static-files.yaml
community/contributing/: index.html
community/references/: index.html
community/third-party-packages/: index.html
docs/: index.md
docs/community/: contributing.md  references.md
docs/references/: javascript.md  style.md  type.md
docs/tutorial/: customize.md  javascript.md  style.md  type.md
references/javascript/: index.html
references/style/: index.html
references/type/: index.html
requirements/: docs.txt  py310-dev.txt  py310-django32.txt  py310-django42.txt  py310-django52.txt  py311-dev.txt  py311-django32.txt  py311-django42.txt  py311-django52.txt  py312-django42.txt  py312-django52.txt  py313-django52.txt  py314-django52.txt  py38-dev.txt  py38-django32.txt  py39-dev.txt  py39-django32.txt
search/: search_index.json
src/static_base/: __init__.py
src/static_base/static/base/css/: bootstrap5.min.css  style-accordion.css  style-blog.css  style-box.css  style-btn.css  style-color.css  style-cubeportfolio.css  style-dropdown.css  style-font-icons.css  style-forms.css  style-general.css  style-gototop.css  style-icon-social.css  style-inverse-text.css  style-list-group.css  style-list.css  style-loading.css  style-menu-ham.css  style-menu-mega.css  style-navbar.css  style-overlay.css  style-pricing.css  style-reset.css  style-responsive.css  style-scroll-animations.css  style-slider-revolution.css  style-sticky-header.css  style-swiper.css  style-tabs.css  style-tiles.css  style-widgets.css  style-wrapper-bg-image.css  style-wrapper-bg-video.css  style-wrapper-block-image.css
src/static_base/static/base/css/plugins/: lightgallery-bundle.min.css  render.css
src/static_base/static/base/js/: jquery.migrate.min.js
src/static_base/static/base/js/plugins/: gototop.js  gototop.min.js  jquery.mousewheel.min.js  jquery.themepunch.revolution.min.js  popper.js.map  prettify.min.js  swiper-bundle.min.js.map  typer.js  whitespace.js
src/static_base/static/base/type/: font-awesome.css  font-elemis.css  font-get-show.css  font-inclitodo.css  font-levorotary.css  font-montserrat.css  font-muli.css  font-rumpi.css  font-slimicons.css  icons.css
src/static_base/static/base/type/elemis/: elemis.json
src/static_base/static/base/type/get_show/: More Info.txt
src/static_base/static/base/type/inclitodo/: License.txt
src/static_base/static/base/type/rumpi/: More Info.txt
src/static_base/static/base/type/slimicons/: slimicons.json
tutorial/customize/: index.html
tutorial/javascript/: index.html
tutorial/style/: index.html
tutorial/type/: index.html
